--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "vue-bilibili-master",
+  "homepage":"https://AIMEE-TT.github.io/-Bilibili-",
   "version": "0.1.0",
   "private": true,
   "scripts": {
