--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue-bilibili-master",
-  "homepage": "https://AIMEE-TT.github.io/vue-bilibili-master",
+  "name": "-Bilibili-",
+  "homepage": "https://AIMEE-TT.github.io/-Bilibili-",
   "version": "0.1.0",
   "private": true,
   "scripts": {
